# real-time-ml-system

./: .dockerignore  .envrc  .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer-lock.json  devcontainer.json  postCreateCommand.sh
dashboards/: candles.json
deployments/dev/backfill-technical-indicators/: backfill-technical-indicators-cm.yaml  backfill-technical-indicators-d.yaml  candles-historical-d.yaml  kustomization.yaml  technical-indicators-historical-d.yaml  trades-historical-d.yaml
deployments/dev/candles/: candles-d.yaml
deployments/dev/kind/: create_cluster.sh  install_grafana.sh  install_kafka.sh  install_kafka_ui.sh  install_risingwave.sh
deployments/dev/kind/manifests/: grafana-values.yaml  kafka-e11b.yaml  mlflow-values.yaml  risingwave-values.yaml
deployments/dev/prediction-api/: prediction-api-cm.yaml  prediction-api-d.yaml  prediction-api-s.yaml
deployments/dev/prediction-generator/: prediction-generator-cm.yaml
deployments/dev/training-pipeline/: training-pipeline-cj.yaml  training-pipeline-cm.yaml
docker/: candles.Dockerfile  prediction-api.Dockerfile  prediction-generator.Dockerfile  trades.Dockerfile  training-pipeline.Dockerfile
docs/: rust_install.md
scripts/: build-and-push-image.sh
services/candles/: pyproject.toml  settings.env
services/candles/src/candles/: config.py  main.py
services/news/: .env.local.example  pyproject.toml
services/news-sentiment/: .env.local.example  Makefile  README.md  pyproject.toml
services/news-sentiment/src/news_sentiment/: config.py  curate_dataset.py  dataset.py  evaluate.py  main.py  sentiment_extractor.py
services/news-sentiment/src/news_sentiment/baml_src/: clients.baml  sentiment_scores.baml
services/news/src/news/: config.py  main.py  news_data_source.py  news_downloader.py
services/prediction-api/: .env.local.example  Cargo.toml  latest_predictions.sql
services/prediction-api/src/: config.rs  db.rs  main.rs
services/prediction-api/src/routes/: health.rs  mod.rs  prediction.rs
services/predictor/: eda_report.html  mlflow.db  pyproject.toml  query.sql
services/predictor/src/predictor/: best_model.py  config.py  data_validation.py  model_registry.py  models.py  names.py  predict.py  train.py
services/technical_indicators/: pyproject.toml  query.sql
services/technical_indicators/src/technical_indicators/: candle.py  config.py  indicators.py  main.py  table.py
services/trades/: pyproject.toml  settings.env
services/trades/src/trades/: config.py  kraken_ohlc_api.py  kraken_rest_api.py  kraken_websocket_api.py  main.py
