[project]
name = "news-sentiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ahmed Sherif", email = "as4349124@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "baml-py>=0.222.0",
    "fire>=0.7.1",
    "opik>=2.0.42",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["uv_build>=0.11.13,<0.12.0"]
build-backend = "uv_build"
