[project]
name = "news"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ahmed Sherif", email = "as4349124@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "annotated-types>=0.7.0",
    "quixstreams>=3.23.4",
    "confluent-kafka==2.8.2",
    "referencing==0.36.0",
    "loguru>=0.7.3",
    "jsonschema>=4.18.0",
    "pandas>=2.3.3",
]

[build-system]
requires = ["uv_build>=0.11.13,<0.12.0"]
build-backend = "uv_build"
