[project]
name = "technical-indicators"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ahmed Sherif", email = "as4349124@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "ta-lib>=0.6.8",
]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"
